# oh-tray

./: .gitignore  Cargo.toml  README.md  app-manifest.rc
conf/: tray.yaml  tray.yml
log/: README.md
src/: main.rs
