[package]
name = "oh-tray"
version = "0.1.0"
edition = "2024"

[dependencies]
command-group = { version = "5.0.1",features = ["with-tokio"] }
tray-icon = "0.21.3"
image = "0.25.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
webbrowser = "1.2.0"
embed-resource = "3.0.7"
tao = "0.34.6"
anyhow = "1.0.102"
config = "0.15.22"
clap = { version = "4.6.0",features = ["derive"] }
tokio = { version = "1.50.0",features = ["full"] }
sys-locale = "0.3.2"
futures = "0.3.32"


[profile.release]
lto = true          # Link Time Optimization
codegen-units = 1   # 减少生成单元，提高优化空间
opt-level = "z"     # "z" 优化体积，"s" 优化大小，默认 "3" 优化速度
